# bulldog

./: .rancher-pipeline.yml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
UNKNOWN.egg-info/: SOURCES.txt
bulldog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
